# rst-previewer

./: LICENSE  README.md  pyproject.toml
src/rst_previewer/: __init__.py  app.py  main.py
