[project]
authors = [{ name = "rohanmohapatra", email = "rohanironcrest14@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "docutils>=0.22.1",
    "gradio==5.46.0",
    "termcolor>=3.1.0",
    "typer>=0.17.5",
]
description = "A modern CLI and web-based viewer for reStructuredText files."
name = "rst-previewer"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
rst-previewer = "rst_previewer.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
