[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "rohanmohapatra", email = "rohanironcrest14@gmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Editors :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "docutils>=0.21",
    "gradio>=4.0.0",
    "termcolor>=2.4.0",
    "typer[all]>=0.9.0", # Using [all] for rich support
]
description = "A modern CLI and web-based viewer for reStructuredText files."
name = "rst-previewer"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.1"

[project.scripts]
rst-previewer = "rst_previewer.main:app"

# This section connects your project to GitHub and other sites.
# Make sure this URL is correct!
[project.urls]
"Bug Tracker" = "https://github.com/rohanmohapatra/rst-previewer/issues"
Homepage = "https://github.com/rohanmohapatra/rst-previewer"
